--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -31,6 +31,7 @@
     - "@development-tools"
     - colordiff
     - dnf-plugins-core
+    - fedora-workstation-repositories
     - htop
     - jq
     - pcre
