--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -32,6 +32,7 @@
     - colordiff
     - dnf-plugins-core
     - fedora-workstation-repositories
+    - flatpak
     - git-all
     - htop
     - jq
