--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -41,6 +41,7 @@
     - ripgrep
     - the_silver_searcher
     - tig
+    - tree
     - xclip
 
 # https://github.com/source-foundry/hack-linux-installer
