--- a/ansible/roles/snap/tasks/main.yaml
+++ b/ansible/roles/snap/tasks/main.yaml
@@ -1,4 +1,13 @@
 ---
+# Based on https://snapcraft.io/docs/installing-snap-on-fedora
+
+- name: Install pre-requisites for snap
+  become: yes
+  dnf:
+    state: latest
+    name:
+    - kernel-modules
+
 - name: Install snap
   become: yes
   dnf:
