--- a/ansible/roles/docker/tasks/main.yaml
+++ b/ansible/roles/docker/tasks/main.yaml
@@ -1,10 +1,12 @@
 ---
+# Based on https://docs.docker.com/engine/install/fedora/#install-using-the-repository
+
 - name: Add Docker repository
   become: yes
-  yum_repository:
-    name: docker-ce
-    description: Docker
-    baseurl: https://download.docker.com/linux/fedora/docker-ce.repo
+  command: dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo
+  args:
+    creates: "/etc/yum.repos.d/docker-ce.repo"
+    warn: false
 
 - name: Install Docker
   become: yes
